db connection works, added sorting, refactored
Should add a radio button for ascending or descending order. Filter options (ie. only display over a certain transaction amount) could be a good idea as well

--- a/Data Table Site January 2022/index.html
+++ b/Data Table Site January 2022/index.html
@@ -19,17 +19,18 @@
         <form name="form" method="post" action="submit.php" class="controls">
             <h3 class="controlsTitle">Controls</h3>
 
-            <label>Cool! A Dropdown!</label>
+            <label>Sort By: &nbsp;</label>
             <select name="option" method="post">
-                <option value="-" selected="selected">-</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
+                <option value="Name">Name</option>
+                <option value="Email">Email</option>
+                <option value="Zip Code">Zip Code</option>
+                <option value="Customer Code">Customer Code</option>
+                <option value="Transaction Total">Transaction Total</option>
             </select>
             <input type="submit" name="submit" onsubmit="this.form.submit()">
         </form>
+        <footer>This is a footer</footer>
     </div>
-    <footer>This is a footer</footer>
+    
 </body>
 </html>
