added asc / desc sorting via radio buttons
up next, allow SQL request filter (maybe just make it by transaction size for now) and do some final styling

--- a/Data Table Site January 2022/index.html
+++ b/Data Table Site January 2022/index.html
@@ -27,6 +27,16 @@
                 <option value="Customer Code">Customer Code</option>
                 <option value="Transaction Total">Transaction Total</option>
             </select>
+            <br><br>
+
+            
+            <input type="radio" name="order" value="ascending" checked="checked">
+            <label for="order">Ascending</label>
+            <input type="radio" name="order" value="descending">
+            <label for="order">Descending</label>
+            <br>
+
+
             <input type="submit" name="submit" onsubmit="this.form.submit()">
         </form>
         <footer>This is a footer</footer>
