added filtering, just needs final styling
note to self: the sql currency data type is evil

--- a/Data Table Site January 2022/index.html
+++ b/Data Table Site January 2022/index.html
@@ -29,6 +29,9 @@
             </select>
             <br><br>
 
+            <label for="minTransaction">Min transaction value (0-10000):</label>
+            <input type="number" name="minTransaction" min="0" max="10000" value="0">
+            <br><br>
             
             <input type="radio" name="order" value="ascending" checked="checked">
             <label for="order">Ascending</label>
